# SRBA

./: pyproject.toml
SRBA/: character.py  combatEntity.py  data_manager.py  decision.py  enemy.py  game_manager.py  light_cone.py
SRBA/relic/: relic.py  relic_generator.py
SRBA/state_adjust/buff/absBuff/: PermanentBuff.py  TimeRestrictStatesBuff.py
SRBA/state_adjust/buff/bronya/: bronya_attack_boost.py  bronya_skill_buff.py  bronya_ult_buff.py
SRBA/state_adjust/buff/luocha/: luocha_AbyssFlower.py  luocha_AutoSkil_CoolDown.py  luocha_AutoSkill.py  luocha_CycleOfLife.py
SRBA/state_adjust/buff/relic_effect/: outerTwoRelicBuff.py
battle/: character.py  characterFactory.py  cycle.py  damage_manager.py  data_parser.py  enemy.py  game_manager.py  light_cone.py  rules.py  targetSet.py  timer.py  toughness.py
battle/battle_data/: property.json
battle/battle_event/event_core/: event.py
battle/state_adjust/: state_adjust.py
battle/state_adjust/buff/absBuff/: TimeRestrictStatesBuff.py
battle/state_adjust/buff/luocha/: luocha_AbyssFlower.py  luocha_AutoSkill.py
battle/state_adjust/buff/relic_effect/: outerTwoRelicBuff.py  (+1 more)
docs/: readme.MD
docs/source/: conf.py  index.rst
docs/source/Introduction/: todo.rst
docs/source/Q_and_A/: q_and_a.rst
docs/source/Todo/: todo.rst
sbra/: entity.py  game.py  game_state.py  state_base.py
sbra/brain/: brain.py  enemy_brain.py
srba/: character.py  combatEntity.py  data_manager.py  enemy.py  game_manager.py  light_cone.py
srba/relic/: relic.py  relic_generator.py
test/: lightcone_test.py  parser_test.py
(+16 files in other folders)
