[tool.poetry]
name = "srba"
version = "0.1.0"
description = ""
authors = ["0x00-pl <0x00.pl@gmail.com>"]
readme = "docs/readme.MD"
packages = [{include = "srba"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
